--- a/src/components/user/style.scss
+++ b/src/components/user/style.scss
@@ -8,19 +8,19 @@
 
     .avatar{
       float: left;
-      padding-left: 5%;
+      padding-left: 3%;
       width:30%;
       
       .avatarImg{
-        width:80px;
-        height: 80px;
+        width:90px;
+        height: 90px;
         overflow: hidden;
         border-radius: 50%;
-        margin-left:15%;
+        margin-left:13%;
       }
     }  
     .info{
-      padding-left: 40%;
+      padding-left: 35%;
 
       .login{
         font-size: 20px;
@@ -31,10 +31,11 @@
       .userDetail{
         color:#9e9c9c;
         margin:20px 0;
+        font-size: 13px;
 
-        .svg{
-          height: 20px;
-          width: 20px;
+        .userIcon{
+          height: 15px;
+          width: 15px;
         }
 
         .html_url{
@@ -47,8 +48,7 @@
 
       .follow{
         color:#9e9c9c;
-        padding: 20px 0;
-        font-size: 18px;    
+        padding: 10px 0; 
         
         .number{
           font-weight: bold;
@@ -66,16 +66,16 @@
 
       .organizarions{
         font-weight: bold;
-        font-size:15px;
+        font-size:13px;
         padding:40px 0;
       }
     }
   }  
 
-  .codeInfo{
+  .codeToolbar{
     .block{
       font-weight: bold;
-      padding: 20px 0;
+      padding: 15px 0;
 
       .icon{
         height: 20px;
