--- a/src/components/activityItem/style.scss
+++ b/src/components/activityItem/style.scss
@@ -1,6 +1,7 @@
 .repo{
   background-color: white;
-  box-shadow: 0 2px 2px #888;
+  box-shadow: 0 4px 2px rgba(120,120,120,0.1);
+  border-radius: 5px;
   background: #fff;
   display: flex;
   flex-direction: row;
