--- a/src/pages/notification/style.scss
+++ b/src/pages/notification/style.scss
@@ -32,12 +32,22 @@
         .action{
           margin: 0 5px;
         }
+
+        p{
+          white-space: nowrap; // 文本强制不换行；
+          text-overflow:ellipsis; // 文本溢出显示省略号；
+          overflow:hidden; // 溢出的部分隐藏；
+        }
+
+        .limitWidth{
+          max-width:85px;
+        }
       }
 
       .title-time{
         color:rgb(169, 169, 169);
         font-size: 12px;
-        margin-right: 5px;
+        margin-right: 10px;
       }
     }
   }
