--- a/src/components/activityItem/style.scss
+++ b/src/components/activityItem/style.scss
@@ -48,6 +48,10 @@
 
       p{
         padding-right: 5px;
+        max-width: 100px;
+        white-space: nowrap; // 文本强制不换行；
+        text-overflow:ellipsis; // 文本溢出显示省略号；
+         overflow:hidden; // 溢出的部分隐藏；
       }
 
       .lang-color{
