--- a/src/pages/search/style.scss
+++ b/src/pages/search/style.scss
@@ -1,8 +1,6 @@
 .repos{
   width: 100%;
   height: 100%;
-  background-color: rgba(200,200,200,0.25);
-  padding-bottom: 20px;
 
   .search{
     background-color: white;
@@ -12,10 +10,11 @@
       border-radius: 20px;
       background-color: rgba(200,200,200,0.25);
       display: flex;
-      align-items: flex-end;
+      align-items: center;
 
       input{
         font-size: 13px;
+        width: 100%;
       }
 
       .search-icon{
@@ -26,6 +25,12 @@
     }
   }
 
+  .search-result{
+    margin: 10px auto;
+    color:rgb(141, 141, 141);
+    font-size: 12px;
+    text-align: center;
+  }
   .repo-item{
     margin:15px;
   }
