--- a/src/pages/repo/style.scss
+++ b/src/pages/repo/style.scss
@@ -87,6 +87,14 @@
   .repoToolbar{
     margin: 10px 0;
   }
+
+  .repoReadMe{
+    .readme{
+      margin:auto;
+      width:90%;
+      padding-bottom: 20px;
+    }
+  }
 }
 
 .block{
