--- a/src/pages/repo/style.scss
+++ b/src/pages/repo/style.scss
@@ -68,7 +68,7 @@
         }
 
         .textMini{
-          color:rgb(167, 167, 167);
+          color:rgb(225,225,225);
           margin:0 5px;
         }
       }
@@ -76,10 +76,54 @@
       .contributorList{
         width: 100%;
 
-        .listText{
+        .listTitle{
           font-size: 12px;
           font-weight: bold;
           margin:20px 0;
+        }
+
+        .listItem{
+          display: flex;
+          justify-content: space-between;
+          border:1px solid rgb(225,225,225);
+          border-radius: 5px;
+          padding:5px 10px;
+          margin: 10px 0;
+
+          .listItemLeft{
+            width:40%;
+            display: flex;
+            align-items: center;
+            overflow: hidden;
+            white-space:nowrap;
+            text-overflow:ellipsis;
+
+            .avatarImgMini{
+              width: 20px;
+              height: 20px;
+              min-width: 20px;
+              min-height: 20px;
+              overflow: hidden;
+              border-radius: 50%;
+              margin-right: 10px;
+            }
+
+            .loginMini{
+              font-size: 15px;
+            }
+          }
+
+          .listItemMiddle{
+            width:40%;
+            text-align: center;
+            color:rgb(112,203,82);
+            font-size: 13px;
+          }
+
+          .listItemRight{
+            width: 20%;
+            text-align: right;
+          }
         }
       }
     }
@@ -131,7 +175,7 @@
 
 .bar{
   background-color: white;
-  border:1px solid rgb(167, 167, 167);
+  border:1px solid rgb(225,225,225);
   border-radius: 5px;
   padding:5px;
   display:flex;
