--- a/src/components/user/style.scss
+++ b/src/components/user/style.scss
@@ -19,6 +19,15 @@
         border-radius: 50%;
         margin-left:13%;
       }
+
+      .followBtn{
+        background-color:black;
+        font-size: 15px;
+        margin:20px 18px;
+        color:white;
+        line-height: 28px;
+        padding: 0
+      }
     }  
     .info{
       padding-left: 35%;
